Nytt endepunkt for utvidetbeskrivelse for å ta imot application/json
